# cookiecutters

./: CLAUDE.md  README.md
.github/: copilot-instructions.md
.github/workflows/: test-cookiecutters.yml  test-julia-package.yml  test-python-cpp-package.yml  test-python-package.yml  test-r-project.yml  test-tex-article.yml  test-tex-poster.yml  test-tex-presentation.yml
julia_package/: README.md  cookiecutter.json
julia_package/{{cookiecutter.dir_name}}/: .gitignore  Project.toml  README.md  Taskfile.yml  devenv.nix  versionary.jsonc
julia_package/{{cookiecutter.slug}}/: LICENSE  Makefile  Project.toml  README.md
python_cpp_package/: cookiecutter.json
python_cpp_package/{{cookiecutter.dir_name}}/: .gitignore  .releaserc.json  CMakeLists.txt  Taskfile.yml  devenv.nix  pyproject.toml
python_cpp_package/{{cookiecutter.dir_name}}/.github/workflows/: test.yml
python_cpp_package/{{cookiecutter.dir_name}}/docs/source/: api.md  conf.py
python_cpp_package/{{cookiecutter.dir_name}}/tests/: test_simple.py
python_cpp_package/{{cookiecutter.dir_name}}/{{cookiecutter.project_slug}}/: my_module.py
python_cpp_package/{{cookiecutter.package_name}}/: .releaserc.json  CMakeLists.txt  Taskfile.yml
python_package/: cookiecutter.json
python_package/{{cookiecutter.dir_name}}/: Makefile  README.md  pyproject.toml
python_package/{{cookiecutter.package_name}}/: README.md  (+1 more)
r_package/: cookiecutter.json
r_project/: cookiecutter.json
tex-poster/: cookiecutter.json
tex_article/: cookiecutter.json
tex_poster/: cookiecutter.json
tex_presentation/: cookiecutter.json
(+67 files in other folders)
